# cvxbiclustr

./: Makefile  README.md  cvxclustr.py  cvxclustr_path.cpp  mmio.cpp  mmio.h  postprocessing.py  requirements.txt
data/: checker.csv  checker_noisy.csv  lung100.csv  lung500.csv  potential2.csv  president.csv  tcga_breast.csv
docker/: Dockerfile
lib/cvxclustr-0.3/: AUTHORS  ChangeLog  Makefile.in  NEWS  configure  configure.ac  cvxclustr.pc.in
lib/cvxclustr-0.3/src/: Makefile.am  Makefile.in  cvxclustr.cpp  cvxclustr.h  fasta.cpp  pgd.cpp  spblas.cpp  util.cpp
script/: lung100.sh  lung500.sh  multithread.sh  tcga_breast.sh
